client: Fix open button on mobile
We changed it to link on desktop for better coverage but forgot to do it on mobile,
breaking it. Let’s remedy this now.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -585,6 +585,7 @@ span.offline-count.diff {
 }
 
 .entry-smartphone-share button,
+.entry-smartphone-share a,
 .entry-toolbar button,
 .entry-toolbar a {
     background-color: transparent;
